--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -74,5 +74,25 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
+.layout {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.site-layout-content {
+  position: relative;
+  padding: 24px;
+  background: #fff;
+  width: 60%;
+  left: 20%;
+  height: 90%;
+}
+
+.layout-bread {
+  position: relative;
+  width: 20%;
+  left: 20%;
+}
 
 /*# sourceMappingURL=App.css.map */
