--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,1 +1,19 @@
 @import "nullstyle";
+.layout{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.site-layout-content {
+  position: relative;
+  padding: 24px;
+  background: #fff;
+  width: 60%;
+  left: 20%;
+  height: 90%;
+}
+.layout-bread{
+  position: relative;
+  width: 20%;
+  left: 20%;
+}
