--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -81,18 +81,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .site-layout-content {
-  position: relative;
+  position: absolute;
   padding: 24px;
   background: #fff;
-  width: 60%;
-  left: 20%;
+  width: 90%;
+  left: 5%;
   height: 90%;
-}
-
-.layout-bread {
-  position: relative;
-  width: 20%;
-  left: 20%;
+  bottom: 5%;
 }
 
 /*# sourceMappingURL=App.css.map */
