--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,15 +5,11 @@
   height: 100%;
 }
 .site-layout-content {
-  position: relative;
+  position: absolute;
   padding: 24px;
   background: #fff;
-  width: 60%;
-  left: 20%;
+  width: 90%;
+  left: 5%;
   height: 90%;
-}
-.layout-bread{
-  position: relative;
-  width: 20%;
-  left: 20%;
+  bottom: 5%;
 }
