feat: added client adding to address

--- a/src/components/Address/AddressAndClientList.css
+++ b/src/components/Address/AddressAndClientList.css
@@ -1,5 +1,11 @@
 .app-address-street {
   margin: 15px 0 0 0;
+  font-weight: bold;
+}
+
+.app-phone-text:before {
+  content: "*";
+  color: red;
 }
 
 /*# sourceMappingURL=AddressAndClientList.css.map */
